Re #183 payment from applicable countries option

--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -1,4 +1,6 @@
 "Allowed Shipping Methods","Allowed Shipping Methods"
 "Enabled","Enabled"
+"Payment from Applicable Countries","Payment from Applicable Countries"
+"Payment from Specific Countries","Payment from Specific Countries"
 "Sort Order","Sort Order"
 "Title","Title"
