--- a/i18n/pl_PL.csv
+++ b/i18n/pl_PL.csv
@@ -1,4 +1,6 @@
-"Allowed Shipping Methods","Dozwolone Metody Dostawy"
-"Enabled","Aktywny"
+"Allowed Shipping Methods","Dozwolone metody dostawy"
+"Enabled","Włączone"
+"Payment from Applicable Countries","Płatność ze stosownych krajów"
+"Payment from Specific Countries","Płatność z wybranych krajów"
 "Sort Order","Porządek Sortowania"
 "Title","Tytuł"
