--- a/i18n/pl_PL.csv
+++ b/i18n/pl_PL.csv
@@ -1,6 +1,10 @@
 "Allowed Shipping Methods","Dozwolone metody dostawy"
+"Copy the value of POS ID (pos_id) parameter from your POS configuration in Payu.pl panel","Skopiuj wartość parametru <b>Id punktu płatności (pos_id)</b> z konfiguracji Twojego punktu płatności w panelu Payu.pl"
+"Copy the value of Second key (MD5) parameter from your POS configuration in Payu.pl panel","Skopiuj wartość parametru <b>Drugi klucz (MD5)</b> z konfiguracji Twojego punktu płatności w panelu Payu.pl"
 "Enabled","Włączone"
+"Merchant POS ID","Id punktu płatności"
 "Payment from Applicable Countries","Płatność ze stosownych krajów"
 "Payment from Specific Countries","Płatność z wybranych krajów"
+"Signature Key","Klucz konfiguracyjny"
 "Sort Order","Porządek Sortowania"
 "Title","Tytuł"
