Re #186 redirect to custom page after placing order

--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -5,6 +5,7 @@
 "Merchant POS ID","Merchant POS ID"
 "Payment from Applicable Countries","Payment from Applicable Countries"
 "Payment from Specific Countries","Payment from Specific Countries"
+"Place Order and Pay with Payu.pl","Place Order and Pay with Payu.pl"
 "Signature Key","Signature Key"
 "Sort Order","Sort Order"
 "Title","Title"
