--- a/i18n/pl_PL.csv
+++ b/i18n/pl_PL.csv
@@ -5,6 +5,7 @@
 "Merchant POS ID","Id punktu płatności"
 "Payment from Applicable Countries","Płatność ze stosownych krajów"
 "Payment from Specific Countries","Płatność z wybranych krajów"
+"Place Order and Pay with Payu.pl","Zamów i zapłać z Payu.pl"
 "Signature Key","Klucz konfiguracyjny"
 "Sort Order","Porządek Sortowania"
 "Title","Tytuł"
