Re #186 changes in sending shipping method data, fix for method availability check

--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -6,6 +6,7 @@
 "Payment from Applicable Countries","Payment from Applicable Countries"
 "Payment from Specific Countries","Payment from Specific Countries"
 "Place Order and Pay with Payu.pl","Place Order and Pay with Payu.pl"
+"Shipping Method","Shipping Method"
 "Signature Key","Signature Key"
 "Sort Order","Sort Order"
 "Title","Title"
