--- a/i18n/pl_PL.csv
+++ b/i18n/pl_PL.csv
@@ -6,6 +6,7 @@
 "Payment from Applicable Countries","Płatność ze stosownych krajów"
 "Payment from Specific Countries","Płatność z wybranych krajów"
 "Place Order and Pay with Payu.pl","Zamów i zapłać z Payu.pl"
+"Shipping Method","Metoda dostawy"
 "Signature Key","Klucz konfiguracyjny"
 "Sort Order","Porządek Sortowania"
 "Title","Tytuł"
