--- a/i18n/pl_PL.csv
+++ b/i18n/pl_PL.csv
@@ -3,10 +3,11 @@
 "Copy the value of Second key (MD5) parameter from your POS configuration in Payu.pl panel","Skopiuj wartość parametru <b>Drugi klucz (MD5)</b> z konfiguracji Twojego punktu płatności w panelu Payu.pl"
 "Enabled","Włączone"
 "Merchant POS ID","Id punktu płatności"
+"New Order Status","Status nowego zamówienia"
 "Payment from Applicable Countries","Płatność ze stosownych krajów"
 "Payment from Specific Countries","Płatność z wybranych krajów"
 "Place Order and Pay with Payu.pl","Zamów i zapłać z Payu.pl"
 "Shipping Method","Metoda dostawy"
 "Signature Key","Klucz konfiguracyjny"
-"Sort Order","Porządek Sortowania"
+"Sort Order","Porządek sortowania"
 "Title","Tytuł"
