Re #190 - custom checkout success page if payment failed, small refactoring of payment controller end action

--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -11,3 +11,4 @@
 "Signature Key","Signature Key"
 "Sort Order","Sort Order"
 "Title","Title"
+"Your payment was rejected.","Your payment was rejected."
