--- a/i18n/pl_PL.csv
+++ b/i18n/pl_PL.csv
@@ -11,3 +11,4 @@
 "Signature Key","Klucz konfiguracyjny"
 "Sort Order","Porządek sortowania"
 "Title","Tytuł"
+"Your payment was rejected.","Twoja płatność została odrzucona."
