Re #191 - repeat payment URL getter

--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -1,4 +1,5 @@
 "Allowed Shipping Methods","Allowed Shipping Methods"
+"Click here to repeat payment.","Click here to repeat payment."
 "Copy the value of POS ID (pos_id) parameter from your POS configuration in Payu.pl panel","Copy the value of <b>POS ID (pos_id)</b> parameter from your POS configuration in Payu.pl panel"
 "Copy the value of Second key (MD5) parameter from your POS configuration in Payu.pl panel","Copy the value of <b>Second key (MD5)</b> parameter from your POS configuration in Payu.pl panel"
 "Enabled","Enabled"
