Re #191 - repeat payment controllers and views

--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -5,11 +5,14 @@
 "Enabled","Enabled"
 "Merchant POS ID","Merchant POS ID"
 "New Order Status","New Order Status"
+"Payment Error","Payment Error"
 "Payment from Applicable Countries","Payment from Applicable Countries"
 "Payment from Specific Countries","Payment from Specific Countries"
 "Place Order and Pay with Payu.pl","Place Order and Pay with Payu.pl"
 "Shipping Method","Shipping Method"
 "Signature Key","Signature Key"
 "Sort Order","Sort Order"
+"Thank you for your payment!","Thank you for your payment!"
+"The repeat payment link is invalid.","The repeat payment link is invalid."
 "Title","Title"
 "Your payment was rejected.","Your payment was rejected."
