--- a/i18n/pl_PL.csv
+++ b/i18n/pl_PL.csv
@@ -5,11 +5,14 @@
 "Enabled","Włączone"
 "Merchant POS ID","Id punktu płatności"
 "New Order Status","Status nowego zamówienia"
+"Payment Error","Błąd Płatności"
 "Payment from Applicable Countries","Płatność ze stosownych krajów"
 "Payment from Specific Countries","Płatność z wybranych krajów"
 "Place Order and Pay with Payu.pl","Zamów i zapłać z Payu.pl"
 "Shipping Method","Metoda dostawy"
 "Signature Key","Klucz konfiguracyjny"
 "Sort Order","Porządek sortowania"
+"Thank you for your payment!","Dziękujemy za Twoją płatność!"
+"The repeat payment link is invalid.","Link do ponowienia płatności jest niepoprawny."
 "Title","Tytuł"
 "Your payment was rejected.","Twoja płatność została odrzucona."
