Re #193 - consuming Payu notifications and order status processor for REST client

--- a/i18n/pl_PL.csv
+++ b/i18n/pl_PL.csv
@@ -1,13 +1,16 @@
 "Allowed Shipping Methods","Dozwolone metody dostawy"
 "Click here to repeat payment.","Kliknij tutaj, żeby ponowić płatność."
+"Completed Payment Order Status","Status zamówienia dla zakończonej płatności"
 "Copy the value of POS ID (pos_id) parameter from your POS configuration in Payu.pl panel","Skopiuj wartość parametru <b>Id punktu płatności (pos_id)</b> z konfiguracji Twojego punktu płatności w panelu Payu.pl"
 "Copy the value of Second key (MD5) parameter from your POS configuration in Payu.pl panel","Skopiuj wartość parametru <b>Drugi klucz (MD5)</b> z konfiguracji Twojego punktu płatności w panelu Payu.pl"
 "Enabled","Włączone"
+"Holded Payment Order Status","Status zamówienia dla wstrzymanej płatności"
 "Merchant POS ID","Id punktu płatności"
-"New Order Status","Status nowego zamówienia"
+"New Payment Order Status","Status zamówienia dla nowej płatności"
 "Payment Error","Błąd Płatności"
 "Payment from Applicable Countries","Płatność ze stosownych krajów"
 "Payment from Specific Countries","Płatność z wybranych krajów"
+"Payu.pl status","Status Payu.pl"
 "Place Order and Pay with Payu.pl","Zamów i zapłać z Payu.pl"
 "Shipping Method","Metoda dostawy"
 "Signature Key","Klucz konfiguracyjny"
