--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -1,13 +1,16 @@
 "Allowed Shipping Methods","Allowed Shipping Methods"
 "Click here to repeat payment.","Click here to repeat payment."
+"Completed Payment Order Status","Completed Payment Order Status"
 "Copy the value of POS ID (pos_id) parameter from your POS configuration in Payu.pl panel","Copy the value of <b>POS ID (pos_id)</b> parameter from your POS configuration in Payu.pl panel"
 "Copy the value of Second key (MD5) parameter from your POS configuration in Payu.pl panel","Copy the value of <b>Second key (MD5)</b> parameter from your POS configuration in Payu.pl panel"
 "Enabled","Enabled"
+"Holded Payment Order Status","Holded Payment Order Status"
 "Merchant POS ID","Merchant POS ID"
-"New Order Status","New Order Status"
+"New Payment Order Status","New Payment Order Status"
 "Payment Error","Payment Error"
 "Payment from Applicable Countries","Payment from Applicable Countries"
 "Payment from Specific Countries","Payment from Specific Countries"
+"Payu.pl status","Payu.pl status"
 "Place Order and Pay with Payu.pl","Place Order and Pay with Payu.pl"
 "Shipping Method","Shipping Method"
 "Signature Key","Signature Key"
