Re #194 - possibility to pay for orders created in admin panel

--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -7,6 +7,7 @@
 "Holded Payment Order Status","Holded Payment Order Status"
 "Merchant POS ID","Merchant POS ID"
 "New Payment Order Status","New Payment Order Status"
+"Pay Now","Pay Now"
 "Payment Error","Payment Error"
 "Payment from Applicable Countries","Payment from Applicable Countries"
 "Payment from Specific Countries","Payment from Specific Countries"
