--- a/i18n/pl_PL.csv
+++ b/i18n/pl_PL.csv
@@ -7,6 +7,7 @@
 "Holded Payment Order Status","Status zamówienia dla wstrzymanej płatności"
 "Merchant POS ID","Id punktu płatności"
 "New Payment Order Status","Status zamówienia dla nowej płatności"
+"Pay Now","Zapłać teraz"
 "Payment Error","Błąd Płatności"
 "Payment from Applicable Countries","Płatność ze stosownych krajów"
 "Payment from Specific Countries","Płatność z wybranych krajów"
