Re #195 - possibility to repeat payment from customer order view

--- a/i18n/pl_PL.csv
+++ b/i18n/pl_PL.csv
@@ -7,12 +7,14 @@
 "Holded Payment Order Status","Status zamówienia dla wstrzymanej płatności"
 "Merchant POS ID","Id punktu płatności"
 "New Payment Order Status","Status zamówienia dla nowej płatności"
+"Order # %1","Zamówienie # %1"
 "Pay Now","Zapłać teraz"
 "Payment Error","Błąd Płatności"
 "Payment from Applicable Countries","Płatność ze stosownych krajów"
 "Payment from Specific Countries","Płatność z wybranych krajów"
 "Payu.pl status","Status Payu.pl"
 "Place Order and Pay with Payu.pl","Zamów i zapłać z Payu.pl"
+"Repeat Payment","Zapłać ponownie"
 "Shipping Method","Metoda dostawy"
 "Signature Key","Klucz konfiguracyjny"
 "Sort Order","Porządek sortowania"
