--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -7,12 +7,14 @@
 "Holded Payment Order Status","Holded Payment Order Status"
 "Merchant POS ID","Merchant POS ID"
 "New Payment Order Status","New Payment Order Status"
+"Order # %1","Order # %1"
 "Pay Now","Pay Now"
 "Payment Error","Payment Error"
 "Payment from Applicable Countries","Payment from Applicable Countries"
 "Payment from Specific Countries","Payment from Specific Countries"
 "Payu.pl status","Payu.pl status"
 "Place Order and Pay with Payu.pl","Place Order and Pay with Payu.pl"
+"Repeat Payment","Repeat Payment"
 "Shipping Method","Shipping Method"
 "Signature Key","Signature Key"
 "Sort Order","Sort Order"
