Re #190 - client exception catching in start payment controllers

--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -20,5 +20,5 @@
 "Sort Order","Sort Order"
 "Thank you for your payment!","Thank you for your payment!"
 "The repeat payment link is invalid.","The repeat payment link is invalid."
+"There was a problem with payment.","There was a problem with payment."
 "Title","Title"
-"Your payment was rejected.","Your payment was rejected."
