--- a/i18n/pl_PL.csv
+++ b/i18n/pl_PL.csv
@@ -20,5 +20,5 @@
 "Sort Order","Porządek sortowania"
 "Thank you for your payment!","Dziękujemy za Twoją płatność!"
 "The repeat payment link is invalid.","Link do ponowienia płatności jest niepoprawny."
+"There was a problem with payment.","Wystąpił problem z płatnością."
 "Title","Tytuł"
-"Your payment was rejected.","Twoja płatność została odrzucona."
