Re #203 - processing online refund

--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -14,6 +14,7 @@
 "Payment from Specific Countries","Payment from Specific Countries"
 "Payu.pl status","Payu.pl status"
 "Place Order and Pay with Payu.pl","Place Order and Pay with Payu.pl"
+"Refund for order # %1","Refund for order # %1"
 "Repeat Payment","Repeat Payment"
 "Shipping Method","Shipping Method"
 "Signature Key","Signature Key"
