--- a/i18n/pl_PL.csv
+++ b/i18n/pl_PL.csv
@@ -14,6 +14,7 @@
 "Payment from Specific Countries","Płatność z wybranych krajów"
 "Payu.pl status","Status Payu.pl"
 "Place Order and Pay with Payu.pl","Zamów i zapłać z Payu.pl"
+"Refund for order # %1","Zwrot do zamówienia # %1"
 "Repeat Payment","Zapłać ponownie"
 "Shipping Method","Metoda dostawy"
 "Signature Key","Klucz konfiguracyjny"
