Re #204 - refactoring of getting client, config helper for Classic API

--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -1,23 +1,26 @@
 "Allowed Shipping Methods","Allowed Shipping Methods"
+"Classic POS","Classic POS"
 "Click here to repeat payment.","Click here to repeat payment."
 "Completed Payment Order Status","Completed Payment Order Status"
-"Copy the value of POS ID (pos_id) parameter from your POS configuration in Payu.pl panel","Copy the value of <b>POS ID (pos_id)</b> parameter from your POS configuration in Payu.pl panel"
-"Copy the value of Second key (MD5) parameter from your POS configuration in Payu.pl panel","Copy the value of <b>Second key (MD5)</b> parameter from your POS configuration in Payu.pl panel"
+"Copy from your POS configuration in Payu.pl panel","Copy from your POS configuration in Payu.pl panel"
 "Enabled","Enabled"
 "Holded Payment Order Status","Holded Payment Order Status"
-"Merchant POS ID","Merchant POS ID"
+"Key (MD5)","Key (MD5)"
 "New Payment Order Status","New Payment Order Status"
 "Order # %1","Order # %1"
 "Pay Now","Pay Now"
+"Payment authorisation key (pos_auth_key)","Payment authorisation key (pos_auth_key)"
 "Payment Error","Payment Error"
 "Payment from Applicable Countries","Payment from Applicable Countries"
 "Payment from Specific Countries","Payment from Specific Countries"
 "Payu.pl status","Payu.pl status"
 "Place Order and Pay with Payu.pl","Place Order and Pay with Payu.pl"
+"POS ID (pos_id)","POS ID (pos_id)"
 "Refund for order # %1","Refund for order # %1"
 "Repeat Payment","Repeat Payment"
+"Second key (MD5)","Second key (MD5)"
+"Set to No if you are using Checkout POS","Set to No if you are using Checkout POS"
 "Shipping Method","Shipping Method"
-"Signature Key","Signature Key"
 "Sort Order","Sort Order"
 "Thank you for your payment!","Thank you for your payment!"
 "The repeat payment link is invalid.","The repeat payment link is invalid."
