--- a/i18n/pl_PL.csv
+++ b/i18n/pl_PL.csv
@@ -1,23 +1,26 @@
 "Allowed Shipping Methods","Dozwolone metody dostawy"
+"Classic POS","Klasyczny punkt płatności"
 "Click here to repeat payment.","Kliknij tutaj, żeby ponowić płatność."
 "Completed Payment Order Status","Status zamówienia dla zakończonej płatności"
-"Copy the value of POS ID (pos_id) parameter from your POS configuration in Payu.pl panel","Skopiuj wartość parametru <b>Id punktu płatności (pos_id)</b> z konfiguracji Twojego punktu płatności w panelu Payu.pl"
-"Copy the value of Second key (MD5) parameter from your POS configuration in Payu.pl panel","Skopiuj wartość parametru <b>Drugi klucz (MD5)</b> z konfiguracji Twojego punktu płatności w panelu Payu.pl"
+"Copy from your POS configuration in Payu.pl panel","Skopiuj z konfiguracji Twojego punktu płatności w panelu Payu.pl"
 "Enabled","Włączone"
 "Holded Payment Order Status","Status zamówienia dla wstrzymanej płatności"
-"Merchant POS ID","Id punktu płatności"
+"Key (MD5)","Klucz (MD5)"
 "New Payment Order Status","Status zamówienia dla nowej płatności"
 "Order # %1","Zamówienie # %1"
 "Pay Now","Zapłać teraz"
+"Payment authorisation key (pos_auth_key)","Klucz autoryzacji płatności (pos_auth_key)"
 "Payment Error","Błąd Płatności"
 "Payment from Applicable Countries","Płatność ze stosownych krajów"
 "Payment from Specific Countries","Płatność z wybranych krajów"
 "Payu.pl status","Status Payu.pl"
 "Place Order and Pay with Payu.pl","Zamów i zapłać z Payu.pl"
+"POS ID (pos_id)","Id punktu płatności (pos_id)"
 "Refund for order # %1","Zwrot do zamówienia # %1"
 "Repeat Payment","Zapłać ponownie"
+"Second key (MD5)","Drugi klucz (MD5)"
+"Set to No if you are using Checkout POS","Ustaw na Nie, jeśli używasz punktu płatności typu Checkout"
 "Shipping Method","Metoda dostawy"
-"Signature Key","Klucz konfiguracyjny"
 "Sort Order","Porządek sortowania"
 "Thank you for your payment!","Dziękujemy za Twoją płatność!"
 "The repeat payment link is invalid.","Link do ponowienia płatności jest niepoprawny."
