Re #205 - paytypes in Checkout

--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -13,6 +13,7 @@
 "Payment Error","Payment Error"
 "Payment from Applicable Countries","Payment from Applicable Countries"
 "Payment from Specific Countries","Payment from Specific Countries"
+"Paytypes in Checkout","Paytypes in Checkout"
 "Payu.pl status","Payu.pl status"
 "Place Order and Pay with Payu.pl","Place Order and Pay with Payu.pl"
 "POS ID (pos_id)","POS ID (pos_id)"
