--- a/i18n/pl_PL.csv
+++ b/i18n/pl_PL.csv
@@ -13,6 +13,7 @@
 "Payment Error","Błąd Płatności"
 "Payment from Applicable Countries","Płatność ze stosownych krajów"
 "Payment from Specific Countries","Płatność z wybranych krajów"
+"Paytypes in Checkout","Wybór typu płatności w Checkout'cie"
 "Payu.pl status","Status Payu.pl"
 "Place Order and Pay with Payu.pl","Zamów i zapłać z Payu.pl"
 "POS ID (pos_id)","Id punktu płatności (pos_id)"
