Re #213 - payment status on order view page on frontend

--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -1,11 +1,15 @@
 "Allowed Shipping Methods","Allowed Shipping Methods"
+"Cancelled","Cancelled"
 "Classic POS","Classic POS"
 "Click here to repeat payment.","Click here to repeat payment."
+"Completed","Completed"
 "Completed Payment Order Status","Completed Payment Order Status"
 "Copy from your POS configuration in Payu.pl panel","Copy from your POS configuration in Payu.pl panel"
 "Enabled","Enabled"
+"Error","Error"
 "Holded Payment Order Status","Holded Payment Order Status"
 "Key (MD5)","Key (MD5)"
+"New","New"
 "New Payment Order Status","New Payment Order Status"
 "Order # %1","Order # %1"
 "Pay Now","Pay Now"
@@ -15,15 +19,19 @@
 "Payment from Specific Countries","Payment from Specific Countries"
 "Paytypes in Checkout","Paytypes in Checkout"
 "Payu.pl status","Payu.pl status"
+"Pending","Pending"
 "Place Order and Pay with Payu.pl","Place Order and Pay with Payu.pl"
 "POS ID (pos_id)","POS ID (pos_id)"
 "Refund for order # %1","Refund for order # %1"
+"Rejected","Rejected"
 "Repeat Payment","Repeat Payment"
 "Second key (MD5)","Second key (MD5)"
 "Set to No if you are using Checkout POS","Set to No if you are using Checkout POS"
 "Shipping Method","Shipping Method"
 "Sort Order","Sort Order"
+"Status","Status"
 "Thank you for your payment!","Thank you for your payment!"
 "The repeat payment link is invalid.","The repeat payment link is invalid."
 "There was a problem with payment.","There was a problem with payment."
 "Title","Title"
+"Waiting for acceptance","Waiting for acceptance"
