--- a/i18n/pl_PL.csv
+++ b/i18n/pl_PL.csv
@@ -1,11 +1,15 @@
 "Allowed Shipping Methods","Dozwolone metody dostawy"
+"Cancelled","Anulowana"
 "Classic POS","Klasyczny punkt płatności"
 "Click here to repeat payment.","Kliknij tutaj, żeby ponowić płatność."
+"Completed","Zakończona"
 "Completed Payment Order Status","Status zamówienia dla zakończonej płatności"
 "Copy from your POS configuration in Payu.pl panel","Skopiuj z konfiguracji Twojego punktu płatności w panelu Payu.pl"
 "Enabled","Włączone"
+"Error","Błąd"
 "Holded Payment Order Status","Status zamówienia dla wstrzymanej płatności"
 "Key (MD5)","Klucz (MD5)"
+"New","Nowa"
 "New Payment Order Status","Status zamówienia dla nowej płatności"
 "Order # %1","Zamówienie # %1"
 "Pay Now","Zapłać teraz"
@@ -15,9 +19,11 @@
 "Payment from Specific Countries","Płatność z wybranych krajów"
 "Paytypes in Checkout","Wybór typu płatności w Checkout'cie"
 "Payu.pl status","Status Payu.pl"
+"Pending","Przetwarzana"
 "Place Order and Pay with Payu.pl","Zamów i zapłać z Payu.pl"
 "POS ID (pos_id)","Id punktu płatności (pos_id)"
 "Refund for order # %1","Zwrot do zamówienia # %1"
+"Rejected","Odrzucona"
 "Repeat Payment","Zapłać ponownie"
 "Second key (MD5)","Drugi klucz (MD5)"
 "Set to No if you are using Checkout POS","Ustaw na Nie, jeśli używasz punktu płatności typu Checkout"
@@ -27,3 +33,4 @@
 "The repeat payment link is invalid.","Link do ponowienia płatności jest niepoprawny."
 "There was a problem with payment.","Wystąpił problem z płatnością."
 "Title","Tytuł"
+"Waiting for acceptance","Oczekująca na zatwierdzenie"
